Fixing small alignment issue

--- a/public/assets/css/screen.scss
+++ b/public/assets/css/screen.scss
@@ -635,7 +635,7 @@ form {
 		}
 
 		#car-information {
-			padding: 0 5rem;
+			padding: 0 5rem 1rem 5rem;
 			h3 {
 				margin-top: unset;
 			}
